--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "connect": "^3.1.0",
     "gulp": "^3.8.7",
-    "gulp-rename": "^1.2.0",
+    "gulp-concat": "^2.3.4",
     "gulp-stylus": "^1.3.0",
     "gulp-util": "^3.0.0",
     "serve-static": "^1.4.3"
