--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "connect": "^3.1.0",
     "gulp": "^3.8.7",
     "gulp-concat": "^2.3.4",
+    "gulp-jade": "^0.7.0",
     "gulp-stylus": "^1.3.0",
     "gulp-util": "^3.0.0",
     "serve-static": "^1.4.3"
