--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "homepage": "http://igorzoriy.com",
   "devDependencies": {
     "connect": "^3.1.0",
+    "del": "^0.1.1",
     "gulp": "^3.8.7",
     "gulp-concat": "^2.3.4",
     "gulp-data": "^1.0.2",
+    "gulp-imagemin": "^0.6.2",
     "gulp-jade": "^0.7.0",
     "gulp-stylus": "^1.3.0",
     "gulp-util": "^3.0.0",
