--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-data": "^1.0.2",
     "gulp-imagemin": "^0.6.2",
     "gulp-jade": "^0.7.0",
+    "gulp-plumber": "^0.6.4",
     "gulp-s3": "^0.3.0",
     "gulp-stylus": "^1.3.0",
     "gulp-util": "^3.0.0",
