--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp": "^3.8.7",
     "gulp-concat": "^2.3.4",
     "gulp-data": "^1.0.2",
+    "gulp-html2pdf": "^0.1.0",
     "gulp-imagemin": "^0.6.2",
     "gulp-jade": "^0.7.0",
     "gulp-plumber": "^0.6.4",
