--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "gulp": "^3.8.7",
     "gulp-concat": "^2.3.4",
     "gulp-data": "^1.0.2",
+    "gulp-gh-pages": "^0.4.0",
     "gulp-html2pdf": "^0.1.0",
     "gulp-imagemin": "^0.6.2",
     "gulp-inline-css": "^0.2.7",
     "gulp-jade": "^0.7.0",
     "gulp-plumber": "^0.6.4",
-    "gulp-s3": "^0.3.0",
     "gulp-stylus": "^1.3.0",
     "gulp-util": "^3.0.0",
     "serve-static": "^1.4.3"
