--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "url": "https://github.com/igorzoriy/igorzoriy.com/issues"
   },
   "homepage": "http://igorzoriy.com",
+  "scripts": {
+    "serve": "parcel ./index.pug",
+    "build": "parcel build --public-url ./ ./index.pug",
+    "deploy": "npm run build && cp CNAME dist/CNAME && gh-pages -d dist"
+  },
   "devDependencies": {
-    "connect": "^3.1.0",
-    "del": "^0.1.1",
-    "gulp": "^3.8.7",
-    "gulp-gh-pages": "^0.4.0",
-    "gulp-jade": "^0.7.0",
-    "gulp-plumber": "^0.6.4",
-    "gulp-stylus": "^1.3.0",
-    "gulp-util": "^3.0.0",
-    "serve-static": "^1.4.3"
+    "gh-pages": "^1.1.0",
+    "parcel-bundler": "^1.5.0",
+    "parcel-plugin-pug": "^0.2.4",
+    "stylus": "^0.54.5"
   }
 }
